これはMKV10のそーすを改造したものです。

判明バグ?;
一部のゲームでキーボードをだすとフリーズする(武装神姫のムービ時)
比較サーチがおかしくなる
コード保存と読込を繰り返していると保存読込機能が反応しなくなる
一部の浮動小数が表示されない 0.01(0x3C23D70A),0.001 (0x3A83126E)
8byte時メモリエディタのコピー箇所がおかしい
コード最後の行が4BYTEモード以外だと再読込時あどれすが2重に読まれる
ムービー中にサーチ/保存するとフリーズする(0x8838DBF0 むび領域っぽい？),GEN/M33で薄型本体なら拡張RAM定義でたぶん回避可能

this is modded mkultrav10.
KnownProblem;
certain game,keybord PSP freeze(BUSOSINKI etc)
doesnot work fine unknown value search
if code is reloaded & saved many times,save&reload function doesnot work
certain float,doesnot display (0.01,0.001)
as for 8byte RAMeditor,strange copy position
0x8838DBF0 moviezone,pspfat should freeze after search/save...slim user use extraram setting

2011/3/4
decoderからコードを足した際ポップアップメニューがdecode時のものになっていたので修正
□押しメニューでアドレス+1のジャンプ命令貼りつけ追加
例;0x233BC0　→ 0x0A228CEF1 j 0x233BC0+4

2011/3/2
vmfvc/vmtvcがまちがってたっぽいので修正
cwcflagとjokermaskにディレイを追加
拡張RAM定義を0x1000ずらした

2011/2/22
半浮動小数表示のバッファがのこってたので修正
半浮動小数の行間がでかい/切り替え時フリーズするのを修正
□押しでパッドコードマスクタイプになるよう変更
CWC<>NPRでDMAの時のみアドレス初期化し、他はフラグをいじるだけに変更

20011/2/7
635PROでもID取得できるように修正

2011/1/24
GAMEID取得方法を何度でもでるまで取得するように変更

2011/1/21
635PRO対応版同梱

2011/1/15
チート名が32文字以上だとalways on のときはみ出すので32文字以内に修正
キーボードのバグも32文字以上クリアーしてるのが原因ぽいので修正

2011/1/14
キーボードのクリアーボタンの挙動がおかしかったのを修正

2010/12/29
LIBS =  -lpsppower_driver でないと電源関係がだめっぽいので修正
HENの場合は最初の１回だけメニューのボタンをおした際コードをよむようにした。

2010/12/28
OPENIDEA,PROMETEUSのときHBIDになるため
リロードで再取得するように変更

2010/12/24
コードがないときはダミーチートを作成して再読込させるように変更
fnc.txtを番号で分けるようにした,RAM使用に変更
HB/POPSでのID取得判定を厳格化?
decoder一部修正(lvq,svq)
R+SHIFT(SELECTボタン)で半角入力追加,L+SHIFTで小文字
キーボード出したままHOMEを押すとキーボードメニューがのこるのを修正
半角平仮名に変更
コピーアドレスにも色をつける様にした

2010/12/15
表示アドレスを0xA000000以内に拡大
メモリエディタで8/16切り替えたときはみ出していたので修正
負のMFLOATがはみでることがあったので修正
PRXメニューに□押しで電源OFF追加
DECODERのオフセットアドレス表示対応

2010/12/14
IJIROHBIDを0x140以外も対応

2010/12/10
サーチ範囲で開始アドレスが終了アドレスを超えないよう修正
ブラウザでもコピー場所に色をつけるようにした
ディスアセンブラ,PRXメニューからチートを足しても元の場所に戻れるようにした

2010/12/8
コードがないとき左端タブを選択できないよう変更
カラーファイルで設定項目追加
保存したとき同じとこを使っているのでサーチを初期化するよう変更
//PSPFAT
0x8838DBF0 ;savecode_address